LIVIJUKU-341 Päätös- ja oikaisuvaatimukset kunnolla näkyviin.

--- a/app/scripts/views/hakija/hakemus.html
+++ b/app/scripts/views/hakija/hakemus.html
@@ -45,8 +45,10 @@
           <p>
             <a href="api/hakemus/{{hakemusid}}/paatos/pdf" target="_blank">
               <span class="glyphicon glyphicon-file"></span>
-              Avaa päätös (PDF)
+              <b>Avaa päätös (PDF)</b>
             </a>
+            </p>
+          <p>
             <a href="resources/OIKAISUVAATIMUSOSOITUS.docx" target="_blank">
               <span class="glyphicon glyphicon-file"></span>
               Avaa oikaisuvaatimusosoitus (DOCX)
