LIVIJUKU-335 Tekstimuutoksia UI:hin, asetus --> hakuohje

--- a/app/scripts/components/taydennysdialogi/index.html
+++ b/app/scripts/components/taydennysdialogi/index.html
@@ -3,7 +3,7 @@
   <form name="taydennysForm">
     <div class="row">
       <div class="col-md-12">
-        Oletko varma, että hakuat merkitä hakemuksen tarkastetuksi?
+        Oletko varma, että haluat merkitä hakemuksen täydennettäväksi?
       </div>
     </div>
     <div class="row">
