--- a/app/scripts/views/hakija/hakemukset.html
+++ b/app/scripts/views/hakija/hakemukset.html
@@ -13,7 +13,7 @@
         <div class="row">
           <div class="col-md-3 text-center">
             <h1>{{hakemuskausi.vuosi}}</h1>
-            <a href="api/hakemuskausi/{{hakemuskausi.vuosi}}/hakuohje" target="_blank">Valtioneuvoston asetus</a>
+            <a href="api/hakemuskausi/{{hakemuskausi.vuosi}}/hakuohje" target="_blank">Hakuohje</a>
             <br>
             <br>
           </div>
