--- a/app/scripts/views/kasittelija/hakemus.html
+++ b/app/scripts/views/kasittelija/hakemus.html
@@ -172,7 +172,7 @@
     <div ng-show="sallittu('kasittely-hakemus')" class=" col-md-6">
       <button ng-show="hakemusVireilla()"
               juku-varmistusdialogi varmistusotsake="Hakemuksen tarkastaminen"
-              varmistusteksti="Oletko varma, että hakuat merkitä hakemuksen tarkastetuksi? Hakemuksen tarkastettu-merkintää ei ole mahdollista peruuttaa ja hakemuksen sisältöä ei ole mahdollista muuttaa tarkastamisen jälkeen."
+              varmistusteksti="Oletko varma, että haluat merkitä hakemuksen tarkastetuksi? Hakemuksen tarkastettu-merkintää ei ole mahdollista peruuttaa ja hakemuksen sisältöä ei ole mahdollista muuttaa tarkastamisen jälkeen."
               operaatio="tarkastaHakemus()"
               class="pull-right btn btn-success">Merkitse tarkastetuksi
       </button>
