LIVIJUKU-330 / Path ohjaamaan käyttäjä omalle aloitussivulleen  * Hakija "omat hakemukset" sivulle ja käsittelijä "Hakemuskaudet" sivulle Route-määrityksiin tarkastus käyttäjän oikeuksista  * Käyttäjä ohjautuu omalle aloitussivulleen mikäli oikeudet eivät riitä /h/hakemukset/:tyyppi route on nyt /y/hakemukset/:tyyppi (yhteiset)

--- a/app/scripts/components/sidebar/index.html
+++ b/app/scripts/components/sidebar/index.html
@@ -10,8 +10,8 @@
         Omat hakemukset
       </a>
     </li>
-    <li ng-show="sallittu(user, 'view-kaikki-hakemukset')" ng-class="{'is-active': isActive('/k/hakemukset/AH0')}">
-      <a href="#/k/hakemukset/AH0" ng-href="#/k/hakemukset/AH0">
+    <li ng-show="sallittu(user, 'view-kaikki-hakemukset')" ng-class="{'is-active': isActive('/y/hakemukset/AH0')}">
+      <a href="#/y/hakemukset/AH0" ng-href="#/y/hakemukset/AH0">
         Kaikki hakemukset
       </a>
     </li>
