--- a/app/scripts/views/kasittelija/hakemus.html
+++ b/app/scripts/views/kasittelija/hakemus.html
@@ -1,6 +1,6 @@
 <div class="container">
   <juku-navigation>
-    <juku-link-prev href="#/k/hakemukset/{{tyyppi}}">
+    <juku-link-prev href="#/y/hakemukset/{{tyyppi}}">
       Palaa hakemusten päänäkymään
     </juku-link-prev>
     <juku-tabs>
@@ -177,7 +177,7 @@
   </div>
   <div class="row">
     <div class="col-md-6">
-      <juku-link-prev href="#/k/hakemukset/{{tyyppi}}">
+      <juku-link-prev href="#/y/hakemukset/{{tyyppi}}">
         Palaa hakemusten päänäkymään
       </juku-link-prev>
     </div>
