--- a/app/scripts/views/kasittelija/suunnittelu.html
+++ b/app/scripts/views/kasittelija/suunnittelu.html
@@ -115,7 +115,7 @@
     </form>
     <div class="row">
       <div class="col-md-12">
-        <juku-link-prev href="#/k/hakemukset/{{tyyppi}}">
+        <juku-link-prev href="#/y/hakemukset/{{tyyppi}}">
           Palaa avustushakemusten suunnittelunäkymään
         </juku-link-prev>
       </div>
