LIVIJUKU-253 - footerin ja headerin sisällöt samalle kohdalle

--- a/app/scripts/components/footer/index.styl
+++ b/app/scripts/components/footer/index.styl
@@ -10,5 +10,10 @@
   .container, .col-md-2, .col-md-4
     height: 100%
 
+  .col-xs-8, .col-xs-4
+    padding: 0
+    overflow: hidden
+    height: 100%
 .footer__domain
   text-align: right
+
