--- a/app/scripts/views/kasittelija/hakemukset.html
+++ b/app/scripts/views/kasittelija/hakemukset.html
@@ -61,7 +61,7 @@
 
             <div class="row">
               <div class="col-md-12">
-                <table st-table="ks1displayed" class="table table-hover table--hakemukset"
+                <table st-table="ks1displayed" class="table table-hover"
                        st-safe-src=hakemuksetPerVuosi.ks1HakemuksetPerVuosi>
                   <thead>
                   <tr>
@@ -107,7 +107,7 @@
 
             <div class="row">
               <div class="col-md-12">
-                <table st-table="ks2displayed" class="table table-hover table-condensed table--hakemukset"
+                <table st-table="ks2displayed" class="table table-hover table-condensed"
                        st-safe-src=hakemuksetPerVuosi.ks2HakemuksetPerVuosi>
                   <thead>
                   <tr>
@@ -152,7 +152,7 @@
 
             <div class="row">
               <div class="col-md-12">
-                <table st-table="elydisplayed" class="table table-hover table-condensed table--hakemukset"
+                <table st-table="elydisplayed" class="table table-hover table-condensed"
                        st-safe-src=hakemuksetPerVuosi.elyHakemuksetPerVuosi>
                   <thead>
                   <tr>
