--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -64,12 +64,6 @@ body.is-collapsed .app
 textarea
   width: 100%
 
-.suunnitteluheader
-  font-size: 18px
-  margin-bottom: 20px
-  text-transform: uppercase
-  padding-top: 20px
-
 .r-align
   text-align: right
 
@@ -252,3 +246,8 @@ textarea
 
 .avustuskohde .ng-invalid-sallittu-arvo-omarahoitus.ng-dirty .help-block.ng-invalid-sallittu-arvo-omarahoitus
   display: block
+
+// View specific styles
+#suunnittelu
+  table
+    margin-top 1em
