--- a/app/scripts/views/kasittelija/hakemus.html
+++ b/app/scripts/views/kasittelija/hakemus.html
@@ -42,7 +42,7 @@
       </button>
     </div>
   </div>
-  <div class="row" ng-show="hasPaatos(tyyppi, hakemus.hakemustilatunnus)">
+  <div class="row" ng-show="hasPaatos(hakemus.hakemustilatunnus)">
     <div class="col-md-12">
       <p>
         <a href="api/hakemus/{{hakemusid}}/paatos/pdf" target="_blank"><span
