--- a/app/scripts/views/kasittelija/hakemuskaudenHallinta.html
+++ b/app/scripts/views/kasittelija/hakemuskaudenHallinta.html
@@ -205,6 +205,21 @@
             </hakemuskausi-panel>
           </div>
         </div>
+        <div class="row" ng-show="(muokkaaHakuaikojaVuosi==hakemuskausi.vuosi) && (loppuPvmMenneisyydessa(hakemuskausi.avustushakemusLoppupvm) || loppuPvmMenneisyydessa(hakemuskausi.maksatushakemus1Loppupvm) || loppuPvmMenneisyydessa(hakemuskausi.maksatushakemus1Loppupvm))">
+          <div class="col-md-3"></div>
+          <div class="col-md-9 alert alert-warning">
+            <strong>Varoitus!</strong>
+            <p ng-show="loppuPvmMenneisyydessa(hakemuskausi.avustushakemusLoppupvm)">
+              Avustushakemuksen hakuajan loppumispäivämäärä on menneisyydessä.
+            </p>
+            <p ng-show="loppuPvmMenneisyydessa(hakemuskausi.maksatushakemus1Loppupvm)">
+              1.Maksatushakemuksen hakuajan loppumispäivämäärä on menneisyydessä.
+            </p>
+            <p ng-show="loppuPvmMenneisyydessa(hakemuskausi.maksatushakemus2Loppupvm)">
+              2.Maksatushakemuksen hakuajan loppumispäivämäärä on menneisyydessä.
+            </p>
+          </div>
+        </div>
       </div>
     </form>
   </div>
